--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -11,7 +11,8 @@ $whitegrey: #f5f5f5;
 $whitegrey2: #ececec;
 $blue: #179dd3;
 $blue2: #00a8e7;
-$yelow: #ded107;
+$yelow: rgb(241, 227, 8);
+$yelow2: rgb(219, 207, 7);
 $darkyelow: #bab006;
 $white: #ffffff;
 $white2: #ffffff;
